<resources>
    <string name="app_name">Seito</string>
    <string name="register_student_title">Registro de alumno</string>
    <string name="profile_title">Perfil</string>
    <string name="educational_videos_title">Videos Educativos</string>
    <string name="theme_title">Temas</string>
    <string name="course_title">Cursos</string>
    <string name="student_title">Alumnos</string>
    <string name="add_question_title">Agregar pregunta</string>
    <string name="list_question_title">Lista de preguntas</string>
    <string name="answer_questions_title">Resolver preguntas</string>
    <string name="create_exam_title">Crear examen</string>
    <string name="list_exam_title">Lista de examenes</string>
    <string name="student_statistics_title">Estadísticas de avance</string>
    <string name="answer_title">Respuesta</string>
    <string name="assistant_title">Asistente de apoyo </string>
    <string name="school_text">COLEGIO CHICLAYO</string>
    <string name="login_as_text">Iniciar sesión como</string>
    <string name="student_text">Alumno</string>
    <string name="teacher_text">Profesor</string>
    <string name="admin_text">Admin</string>
    <string name="email_text">Correo</string>
    <string name="password_text">Contraseña</string>
    <string name="register_student_text">Registrar alumno</string>
    <string name="verify_code_text">Ingrese su código de verificación</string>
    <string name="verify_code_description_text">Recuerda que este código es único y lo proporciona el centro educativo. Si aún no lo tienes, por favor acércate a solicitarlo.</string>
    <string name="verify_code_description_length_text">Código (hasta 4): confidencial; no lo compartas</string>
    <string name="professor_charge_text">Profesor a cargo:</string>
    <string name="personal_information_text">Información personal</string>
    <string name="name_text">Nombre</string>
    <string name="last_name_text">Apellidos</string>
    <string name="account_credential_text">Credenciales de la cuenta</string>
    <string name="email_register_text">Correo electrónico</string>
    <string name="confirm_password_text">Confirmar contraseña</string>
    <string name="additional_data_text">Datos adicionales</string>
    <string name="age_text">Edad</string>
    <string name="sex_text">Sexo</string>
    <string name="male_text">Masculino</string>
    <string name="female_text">Femenino</string>
    <string name="version_text">Version: %1$s</string>
    <string name="smart_school_management_text">© 2025 Gestión Escolar Inteligente</string>
    <string name="role_text">Rol</string>
    <string name="available_coins_text">Monedas disponibles</string>
    <string name="code_text">Codigo</string>
    <string name="student_type_text">Estudiante</string>
    <string name="teacher_type_text">Profesor</string>
    <string name="student_name_text">¡Hola, %1$s! 👋</string>
    <string name="welcome_text">Bienvenido de nuevo</string>
    <string name="name_teacher_text">Prof. %1$s</string>
    <string name="video_play_text">Videos Educativos</string>
    <string name="areas_study_text">Áreas de Estudio</string>
    <string name="exam_area_text">Áreas de Examenes</string>
    <string name="view_all_text">Ver todos</string>
    <string name="no_video_available_text">No hay videos disponibles</string>
    <string name="no_student_available_text">No hay alumnos disponibles</string>
    <string name="no_course_available_text">No hay áreas disponibles</string>
    <string name="no_option_available_text">Agregar opciónes</string>
    <string name="no_exam_available_text">No hay examenes disponibles</string>
    <string name="no_answer_available_text">No hay respuestas disponibles</string>
    <string name="no_exercise_available_text">No hay ejercicios resueltos</string>
    <string name="no_video_available_description_text">Los videos educativos aparecerán aquí cuando estén disponibles</string>
    <string name="no_course_available_description_text">Las áreas de estudio aparecerán cuando se asignen</string>
    <string name="no_student_available_description_text">Los alumnos aparecerán aquí cuando se registren en el sistema</string>
    <string name="no_option_available_description_text">Ingrese las opciones de la pregunta que desea registrar</string>
    <string name="no_exam_available_description_text">Los examenes aparecerán aquí cuando se registren en el sistema</string>
    <string name="no_answer_available_description_text">El alumno aun no han realizados examenes</string>
    <string name="no_exercise_available_description_text">Los ejercicios aun no se han resuelto por parde de los alumnos</string>
    <string name="course_text">Curso:</string>
    <string name="exam_text">Examen:</string>
    <string name="register_topic_text">Registre su tema</string>
    <string name="register_option_text">Registre una opción</string>
    <string name="previous_level_text">Nivel previo al inicio</string>
    <string name="level_text">Nivel en inicio</string>
    <string name="item_student_text">Alumno:</string>
    <string name="email_item_text">Correo: %1$s</string>
    <string name="age_item_text">Edad: %1$d</string>
    <string name="add_option_text">Agregar opción</string>
    <string name="question_heading_text">Encabezado de la pregunta</string>
    <string name="question_coin_text">Ingreso las monedas de la pregunta</string>
    <string name="question_option_text">Ingreso de opciones</string>
    <string name="select_option_answer_text">Seleccionar como respuesta</string>
    <string name="question_text">Pregunta:</string>
    <string name="answer_text">Respuesta:</string>
    <string name="coins_text">Monedas:</string>
    <string name="no_question_text">No hay preguntas disponibles</string>
    <string name="no_question_description_text">Se mostrarán las preguntas que vallas registrando para el balotario</string>
    <string name="time_elapsed_text">Tiempo transcurrido : %1$s</string>
    <string name="available_currency_text">Monedas disponibles : %1$d</string>
    <string name="theme_text">Tema:</string>
    <string name="sub_theme_text">Subtema:</string>
    <string name="list_question_text">Lista de peguntas</string>
    <string name="name_exam_text">Nombre del examen</string>
    <string name="not_exam_text">No ingreso ni un examen</string>
    <string name="not_exam_sub_text">Ingrese los exámenes con los balotarios que agregaron</string>
    <string name="exercises_tab_text">Ejercicios</string>
    <string name="exam_tab_text">Exámenes</string>
    <string name="average_text">Promedio</string>
    <string name="remaining_tab_text">Restante</string>
    <string name="average_value_text">Promedio:\n%1$.1f</string>
    <string name="note_value_text">No se encontró notas correspondientes</string>
    <string name="exam_graphic_text">Exámenes realizados en el periodo</string>
    <string name="date_completed_text">Fecha realizada : %1$s</string>
    <string name="approximate_time_text">Tiempo aproximado : %1$s</string>
    <string name="test_score_text">Nota de la prueba : %1$.1f</string>
    <string name="exercise_list_text">Lista de ejercicios resuelta</string>
    <string name="exam_list_text">Lista de exámenes resuelta</string>
    <string name="correct_text">La repuesta es : Correcta</string>
    <string name="incorrect_text">La repuesta es : Incorrecta</string>
    <string name="question_item_text">Nombre de la pregunta : %1$s</string>
    <string name="answer_item_text">Repuesta del alumno : %1$s</string>
    <string name="assistant_text">Hola %1$s!, estas preparado para consultar que tema necesitas ayuda</string>
    <string name="enter_your_name_hint">Introduce tu nombre</string>
    <string name="enter_your_last_name_hint">Introduce tus apellidos</string>
    <string name="enter_your_email_hint">Introduce tu correo electrónico</string>
    <string name="enter_your_password_hint">Introduce su contraseña</string>
    <string name="enter_your_age_hint">Introduce su edad</string>
    <string name="name_theme_hint">Nombre del tema</string>
    <string name="option_hint">Nombre de la opción</string>
    <string name="question_heading_hint">ejemplo: 1. ¿Cuandos años tienes…?</string>
    <string name="question_coin_hint">ejemplo: 10</string>
    <string name="select_hint">Selecionar</string>
    <string name="name_exam_hint">Nombbre del examen</string>
    <string name="get_into_button">Ingresar</string>
    <string name="accept_button">Aceptar</string>
    <string name="verify_code_button">Verificar Código</string>
    <string name="register_button">Registrar</string>
    <string name="go_out_button">Salir</string>
    <string name="cancel_button">Cancelar</string>
    <string name="add_theme_button">Agregar</string>
    <string name="add_level_button">Agregar Level</string>
    <string name="add_question_button">Crear pregunta</string>
    <string name="next_button">Siguiente</string>
    <string name="point_button">100 ptos.</string>
    <string name="create_question_button">Crear pregunta</string>
    <string name="no_empty_fields_message">No ingreso datos en los campos</string>
    <string name="no_email_message">No ingreso un correo electrónico</string>
    <string name="no_password_message">No ingreso una contraseña</string>
    <string name="no_email_format_message">Ingrese un correo valido</string>
    <string name="internet_connection_message">No tienes conexión a internet</string>
    <string name="no_user_message">El usuario que ingreso no existe</string>
    <string name="no_code_message">No ingreso un código</string>
    <string name="no_code_length_message">El código ingresado no es valido</string>
    <string name="code_error_message">El código que ingreso no es válido inténtelo de nuevo por favor</string>
    <string name="no_empty_name_student_message">Ingrese el nombre del alumno</string>
    <string name="no_empty_last_name_student_message">Ingrese el apellido del alumno</string>
    <string name="no_empty_confirm_password_student_message">La contraseña no concuerda con la que escribió</string>
    <string name="no_empty_age_student_message">Ingrese la edad del alumno</string>
    <string name="no_empty_age_validation_student_message">La edad que ingreso no es valida</string>
    <string name="no_register_student_message">Hubo problemas con el registro</string>
    <string name="register_student_complete_message">Se registro el estudiante correctamente</string>
    <string name="password_length_message">El tamaño de la contraseña tiene que ser de 6 dígitos a mas</string>
    <string name="profile_student_message">Usted ingreso con un perfil de profesor</string>
    <string name="profile_teacher_message">Usted ingreso con un perfil de alumno</string>
    <string name="error_permission_message">Usaremos solo los permisos necesarios para brindarte todas las funciones de la app. Por favor, concédeselos para continuar.</string>
    <string name="deny_permits_again_permission_message">Si rechazó los permisos, habilítelos manualmente desde la configuración de la aplicación.</string>
    <string name="not_name_theme_message">No ingreso un nombre de tema</string>
    <string name="not_name_theme_firebase_message">No se pudo registrar el tema</string>
    <string name="not_question_title_message">Ingrese el título de la pregunta</string>
    <string name="not_option_message">No agrego opciones en la pregunta</string>
    <string name="not_option_length_message">Máximo debe tener 5 opciones no menos</string>
    <string name="not_coin_message">Colocar monedas para la pregunta</string>
    <string name="not_option_name_message">No ingreso la opción correctamente</string>
    <string name="not_option_response_message">No ingreso una opción como respuesta</string>
    <string name="question_complete_message">Se registro la pregunta</string>
    <string name="no_question_message">Actualmente no cuenta con preguntas</string>
</resources>