<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.QuestionAddActivity">

    <data>

        <variable
            name="questionAddViewModel"
            type="com.leandro1995.seito.viewmodel.QuestionAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_blue_include"
            layout="@layout/app_bar_blue"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            android:layout_marginBottom="@dimen/dimen_0"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/add_question_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_blue_include">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_heading_text" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:ems="10"
                    android:hint="@string/question_heading_hint"
                    android:inputType="text"
                    android:text="@={questionAddViewModel.question.name}"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:text="@string/question_coin_text" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:ems="10"
                    android:hint="@string/question_coin_hint"
                    android:inputType="number"
                    android:int="@={questionAddViewModel.question.coin}"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:text="@string/question_option_text" />

                <TextView
                    android:id="@+id/add_option_text_view"
                    style="@style/LinkBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:onClick="@{()-> questionAddViewModel.button.invoke(questionAddViewModel.OPTION_ADD_BOTTOM_SHEET)}"
                    android:text="@string/add_option_text"
                    tools:ignore="RtlHardcoded" />

                <com.leandro1995.seito.component.list.OptionVerticalComponentList
                    android:id="@+id/option_vertical_component_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    app:error_color="@color/green_EEFBF3"
                    app:error_image="@drawable/ic_grid_course_hint"
                    app:error_sub_title="@string/no_option_available_description_text"
                    app:error_title="@string/no_option_available_text" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/add_question_button"
            style="@style/Button"
            android:layout_width="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_16"
            android:onClick="@{()-> questionAddViewModel.button.invoke(questionAddViewModel.QUESTION_VALIDATION)}"
            android:text="@string/add_question_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>