<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".activity.ExamAddActivity">

    <data>

        <variable
            name="examAddViewModel"
            type="com.leandro1995.seito.viewmodel.ExamAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_blue_include"
            layout="@layout/app_bar_blue"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/register_scroll"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginBottom="@dimen/dimen_16"
            android:fillViewport="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_blue_include">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_text" />

                <Spinner
                    android:id="@+id/course_spinner"
                    style="@style/Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_6" />


                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/theme_text" />

                <Spinner
                    android:id="@+id/theme_spinner"
                    style="@style/Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_6" />

                <TextView
                    style="@style/TextBody5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/sub_theme_text" />

                <Spinner
                    android:id="@+id/sub_theme_spinner"
                    style="@style/Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_6" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/create_button"
            style="@style/Button"
            android:layout_width="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_24"
            android:enabled="false"
            android:text="@string/create_question_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.leandro1995.seito.component.loading.LoadingComponent
            android:id="@+id/loading_component"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            android:layout_marginBottom="@dimen/dimen_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_blue_include" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>