<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NoteDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_blue_include"
            layout="@layout/app_bar_blue"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            android:layout_marginBottom="@dimen/dimen_0"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_blue_include">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <TextView
                    android:id="@+id/date_text"
                    style="@style/TextBody6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/timer_text"
                    style="@style/TextBody6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10" />

                <TextView
                    android:id="@+id/note_text"
                    style="@style/TextBody6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10" />

                <TextView
                    style="@style/TextBody13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/answer_text" />

                <com.leandro1995.seito.component.list.AnswerVerticalComponentList
                    android:id="@+id/answer_vertical_component_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:error_color="@color/green_EEFBF3"
                    app:error_image="@drawable/ic_grid_course_hint"
                    app:error_sub_title="@string/no_answer_available_description_text"
                    app:error_title="@string/no_answer_available_text" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>